--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ header{
     flex-direction: column;
     justify-content: space-between;
     padding:10px 0 0 13%;
-    width  :29%;
+    width:29%;
     height:100%;
     position:fixed;
 } 
@@ -63,8 +63,81 @@ header{
 .tweet-button:hover{
     background-color: rgba(29,255,240,0.9);
 }
-.main{
+main{
     width:71%;
     height:100%;
     margin-left:29%;
+}
+.main-flex{
+    display:flex;
+    width:100%;
+
+}
+.main-feed{
+    width:50%;
+    border-left:1px soild rgb(47,51,54 );
+    border-right:1px soild rgb(47,51,54 ); 
+}
+.home-bar{
+    display:flex;
+    justify-content: space-between;
+    align-items:center;
+    height:55px;
+    width:100%;
+    color:white;
+    font-size:2rem;
+    font-weight: 400;
+    padding:0 15px;
+    position: sticky;
+    top:0;
+    background-color: black;
+}
+
+.new-tweet{
+    display:flex;
+    width:100%;
+    height:120px;
+    padding:4px 16px;
+}
+
+.new-tweet.tweet-img{
+    width:48px;
+    height:48px;
+    cursor:pointer;
+}
+.new-tweet-details{
+    display:flex;
+    flex-direction:column;
+    justify-content: space-evenly;
+    padding-top:4px;
+    width:100%;
+    margin-left:12px;
+}
+.tweets{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    height:60px;
+    width:100%;
+
+}
+.new-tweet-details input{
+    width:100%;
+    height:24px;
+    background-color: black;
+    font-size:2em;
+    border:none;
+    color:white;
+    outline:none;
+
+}
+.tweets .tweet-button{
+    width:74px;
+    height: 35px;
+    margin:0;
+    font-weight:400;
+    font-size:1.5rem;
+}
+.f{
+    color:white;
 }
