--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ main{
     display:flex;
     width:100%;
     height:120px;
-    padding:4px 16px;
+    padding:0 16px;
 }
 
 .new-tweet.tweet-img{
@@ -107,16 +107,15 @@ main{
 }
 .new-tweet-details{
     display:flex;
-    flex-direction:column;
+  
     justify-content: space-evenly;
-    padding-top:4px;
+   
     width:100%;
     margin-left:12px;
 }
 .tweets{
     display:flex;
     justify-content: space-between;
-    align-items: center;
     height:60px;
     width:100%;
 
@@ -138,6 +137,8 @@ main{
     font-weight:400;
     font-size:1.5rem;
 }
-.f{
+
+.new-content{
+    font-size:2em;
     color:white;
 }
